fixed styles overflow

--- a/app/styles/_vertical-menu.scss
+++ b/app/styles/_vertical-menu.scss
@@ -7,7 +7,7 @@
   height: 100vh;
   background-color: $light-gray;
 
-  @media only screen and (max-height: 650px) {
+  @media only screen and (max-height: 900px) {
     overflow-y: scroll;
   }
 }
